      setups are prone to many issues when used polymorphically in
      all cases.

    - dynamic_loader accepts a query_class= to customize the Query
      classes used for both the dynamic collection and the queries
      built from it.

- mssql
    - Added in the MSReal and MSNText types.

- bugfixes, behavioral changes
- general
- orm
    - Corrected problem with Query.delete() and
      Query.update() not working properly with bind 
      parameters. [ticket:1242]

    - Query.select_from(), from_statement() ensure
      that the given argument is a FromClause,
      or Text/Select/Union, respectively.

    - Query() can be passed a "composite" attribute
      as a column expression and it will be expanded.
      Somewhat related to [ticket:1253].
      
    - Query() is a little more robust when passed
      various column expressions such as strings,
      clauselists, text() constructs (which may mean
      it just raises an error more nicely).
      
    - first() works as expected with Query.from_statement().
    
    - Fixed bug introduced in 0.5rc4 involving eager 
      loading not functioning for properties which were
      added to a mapper post-compile using 
      add_property() or equivalent.

    - Fixed bug where many-to-many relation() with
      viewonly=True would not correctly reference the
      link between secondary->remote.
      
    - Duplicate items in a list-based collection will
      be maintained when issuing INSERTs to
      a "secondary" table in a many-to-many relation.
      Assuming the m2m table has a unique or primary key 
      constraint on it, this will raise the expected 
      constraint violation instead of silently
      dropping the duplicate entries. Note that the 
      old behavior remains for a one-to-many relation
      since collection entries in that case
      don't result in INSERT statements and SQLA doesn't
      manually police collections. [ticket:1232]
      